# Besafe_crew

./: README.md  TODO.md  pyproject.toml
besafe/: README.md  pyproject.toml
besafe/src/besafe/: crew.py  main.py
besafe/src/besafe/config/: agents.yaml  tasks.yaml
besafe/src/besafe/tools/: custom_tool.py
