[project]
name = "besafe"
version = "0.1.0"
description = "besafe using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.10.1",
]

[project.scripts]
besafe = "besafe.main:run"
run_crew = "besafe.main:run"
train = "besafe.main:train"
replay = "besafe.main:replay"
test = "besafe.main:test"
run_with_trigger = "besafe.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["besafe/src/besafe"]

[tool.crewai]
type = "crew"
